# Teaching-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  opencode.json  pyproject.toml  requirements.txt  test_system.py
app/: main.py
app/api/: routes.py
app/models/: schemas.py
app/rag/: __init__.py  chunking.py  embeddings.py  generator.py  ingestion.py  retrieval.py
app/services/: teaching.py
app/utils/: config.py  logger.py
data/documents/: smit_overview.md  smit_teaching_staff.md
data/sample/: smit_courses.md
frontend/: streamlit_app.py
src/: config.py
src/agents/: __init__.py  query_router.py  teaching_agent.py
src/api/: server.py
src/cli/: main.py
src/dashboard/: index.html
src/embeddings/: __init__.py  embedder.py
src/generation/: __init__.py  generator.py  memory.py  prompts.py
src/ingestion/: __init__.py  chunker.py  loader.py  processor.py
src/rag/: __init__.py  pipeline.py  self_rag.py
src/retrieval/: __init__.py  hybrid_retriever.py  query_expander.py  reranker.py
src/vector_store/: __init__.py  base.py  chroma_store.py
tests/: conftest.py  test_api.py  test_edge_cases.py  test_rag.py  test_raw_data.py  test_teaching_agent.py
