[project]
name = "smit-teaching-agent"
version = "1.0.0"
description = "SMIT Teaching Agent — RAG-powered educational assistant for Sikkim Manipal Institute of Technology"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.6.0",
    "click>=8.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
smit-teacher = "src.cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
